objects/ssot__CarePlan__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AuthorId__c</fullName>
        <label>Author</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationType__c</fullName>
        <label>Authorization Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlanStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlanTemplateId__c</fullName>
        <label>Care Plan Template</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlan_AuthorId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlan_AuthorId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CarePlan_AuthorId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>CarePlan_AuthorId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlan_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlan_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CarePlan_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>CarePlan_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Plan Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726631887_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlan_CarePlanTemplateId_map_Care_rel</label>
        <referenceTo>ssot__CarePlanTemplate__dlm</referenceTo>
        <relationshipLabel>CarePlan_CarePlanTemplateId_map_Care_rel</relationshipLabel>
        <relationshipName>rel_1716726631887_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726634327_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlan_ParticipantId_map_Account_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CarePlan_ParticipantId_map_Account_I_rel</relationshipLabel>
        <relationshipName>rel_1716726634327_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544762011_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlan_ParticipantId_map_AccountCo_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>CarePlan_ParticipantId_map_AccountCo_rel</relationshipLabel>
        <relationshipName>rel_1718544762011_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>